--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,9 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    animation: App-logo-spin infinite 10s linear;
+    -webkit-animation: App-logo-spin infinite 10s linear;
+}
 }
 
 .App-header {
@@ -30,9 +31,17 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
-  }
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+}
   to {
-    transform: rotate(360deg);
-  }
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
+} 
 }
