--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url(./il_1588xN.3526174863_3la0.jpg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
