--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,23 @@
 .App {
   text-align: center;
+  background-image: url(./il_1588xN.3526174863_3la0.jpg);
+  background-size: cover;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 35vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-out infinite 10s linear;
-    -webkit-animation:App-logo-out infinite 10s linear;
+    animation: App-logo-out infinite 20s linear;
+    -webkit-animation: App-logo-out infinite 20s linear;
 }
 }
 
 .App-header {
-  background-image: url(./il_1588xN.3526174863_3la0.jpg);
-  background-size: cover;
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -31,7 +32,20 @@
 }
 
 .randomShow {
-  background-color: antiquewhite;
+  background-color: rgb(246, 255, 163);
+  color: rgb(20, 0, 201);
+  padding: 0 .5rem 0 .5rem;
+  margin: 0 .25rem 0 .25rem;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.countdown {
+  animation: App-logo-out infinite .5s linear;
+  -webkit-animation: App-logo-out infinite .5s linear;
 }
 /* @keyframes App-logo-in {
   from {
