--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,14 @@
   color: #61dafb;
 }
 
+.setlist {
+  font-size: 1rem;
+}
 .randomShow {
   background-color: rgb(20, 0, 201);
   color: white;
   padding: 0 .5rem 0 .5rem;
-  margin: 0 .25rem 0 .25rem;
+  margin: 0 .25rem 1rem .25rem;
   border-radius: 20px;
   -webkit-border-radius:20px;
   -moz-border-radius:20px;
@@ -55,6 +58,13 @@
   color: red;
 }
 
+.randomShow p {
+  font-size: 1rem;
+}
+
+.randomShow h4, h6 {
+  margin-bottom: 0;
+}
 #bottom-text {
   background-color: white;
   color: rgb(20, 0, 201);
@@ -70,6 +80,13 @@
   animation: App-logo-out infinite 1s linear;
   -webkit-animation: App-logo-out infinite 1s linear;
   cursor: wait;
+  
+}
+
+.relisten a {
+  font-size: 1rem;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 /* @keyframes App-logo-in {
   from {
