--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,7 @@
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+  max-width: 75vw;
 }
 .countdown:hover{
   animation: App-logo-out infinite 1s linear;
@@ -88,22 +89,10 @@
   padding-bottom: 2rem;
   margin-bottom: 2rem;
 }
-/* @keyframes App-logo-in {
-  from {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
+
+.randomShow {
+  max-width: 75vw;
 }
-  to {
-    transform: scale(1.05);
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
-} 
-} */
 
 @keyframes App-logo-out {
   0% {
