--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Cherry Bomb One", cursive;
+  src: local("Chery Bomb One"),
+    url("./fonts/CherryBombOne-Regular.ttf") format("truetype");
+}
+
 body, html {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
